<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2018 Yahia H. El-Tayeb
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <string name="app_name">ما يخص الميت</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="prayer_benefit_str">فضل صلاة الجنازة</string>
    <string name="how_to_pray_str">كيفية صلاة الجنازة</string>
    <string name="request_str">اللَّهم أرحمنا وأغفر لنا ولجميع موتى المسلمين</string>
    <string name="listen_doaa_str">سماع الدعاء</string>
    <string name="start_str">بدء التشغيل</string>
    <string name="replay_str">إعادة التشغيل</string>
    <string name="doaa_time_str">وقت الدعاء</string>
    <string name="doaa_time">وقت الدعاء: 16 دقيقة</string>
    <string name="remaining_time_str">الوقت المتبقى</string>
    <string name="minute_str">دقيقة</string>
    <string name="minutes_str">دقائق</string>
    <string name="one_minute_str">دقيقة واحدة</string>
    <string name="two_minutes_str">دقيقتان</string>
    <string name="less_than_one_minute_str">أقل من دقيقة</string>
    <string name="mashary_str">الشيخ: مشارى راشد العفاسى</string>

    <string name="prayer_benefit">

" قال رسول اللَّه صلى اللَّه عليه وسلم ( من تبع جنازة حتى يصلي عليها كان له من الأجر قيراط )

 والخروج مع الجنازة إلى المقبرة هذا خاص بالرجال، وهكذا زيارة القبور خاص بالرجال، وقد قال -عليه الصلاة والسلام-: (من شهد جنازة حتى يصلى عليها فله قيراط، ومن شهدها حتى تدفن فله قيراطان، قيل: يا رسول اللَّه ما القيراطين قال: مثل الجبلين العظيمين) فهذا يدل على الفضل العظيم، فالمشي مع الجنائر فيه جبر للمصابين وتعزية لهم ومواساة لهم فإنه إذا خرج معهم جبر قلوبهم وعزاهم بعمله وقوله جميعاً 
"
    </string>
    <string name="how_to_pray">
"تتكون الصلاة من أربع تكبيرات ويُسن رفع اليدين فى كل تكبيرة

بعد التكبيرة الأولى: تقرأ الفاتحة

بعد التكبيرة الثانية: النصف الثانى من التشهد (من أول اللهم صل على محمد ... حتى آخر التشهد)

بعد التكبيرة الثالثة: الدعاء للميت

بعد التكبيرة الرابعة: أختلف العلماء فمنهم من قال أن يسكت ومنهم من قال أن يدعو ويمكن أن تدعو وتقول (اللهم لا تحرمنا أجره، ولا تفتنا بعده)

هذا واللَّه أعلم"
    </string>

    <!-- The text of doaa is taken from http://alafasyinshad.blogspot.com.eg/2012/03/doaa-al-maiet.html-->
    <string name="doaa_written">
"إن قلوبنا لتحزن و إن عيوننا لتدمع و إنا على فراق فقيدنا لمحزنون
اللهم أغفر له و أرحمه و عافه و أعفو عنه و اكرم نزله
و وسع مدخله و أغسله بالماء و الثلج و البرد
و نقه من الذنوب و الخطايا كما ينقى الثوب الأبيض من الدنس
اللهم أبدله دارا خيرا من داره و أهلا خيرا من أهله و زوجا خيرا من زوجه
اللهم أدخله الجنة اللهم أدخله الجنة و أعذه من عذاب القبر و عذاب النار
اللهم أغفر لحينا و ميتنا و شاهدنا و غائبنا و صغيرنا و كبيرنا و ذكرنا و أنثانا
اللهم من أحييته منا فأحييه على الإسلام
اللهم من توفيته منا فتوفه على الإيمان
اللهم لا تحرمنا أجره
اللهم لا تحرمنا أجره
و لا تضلنا بعده
و لا تضلنا بعده
اللهم يمن كتابه و هون حسابه و لين ترابه و ألهمه حسن الجواب
و طيب ثراه و أكرم مثواه و أجعل الجنة مستقره و مأواه
اللهم إنه في ذمتك و حبل جوارك فقه من فتنة القبر و عذاب النار
أنت أهل الوفاء أنت أهل الوفاء أنت أهل الوفاء و الحق
فأغفر له و أرحمه إنك أنت الغفور الرحيم
اللهم عبدك و أبن أمتك إحتاج إلى رحمتك و أنت غني عن عذابه
إن كان محسنا فزده في حسناته و إن كان مسيئا فتجاوز عنه يا أرحم الراحمين
اللهم مد له في قبره مد بصره و أجعل قبره روضة من رياض الجنة و لا تجعل قبره حفرة من حفر النار
و أرزق أهله الصبر و السلوان و لا تفتنهم بعده و لا تحرمهم أجره
و أجرهم في مصيبتهم و أخلف لهم خير منها إنا لله و إنا إليه راجعون
اللهم و أطعمه من ثمار الجنان و أجعله ممن قلت فيهم و يطاف عليهم بأنية من فضة و أكواب و أكواب كانت قواريرا قوارير من فضة قدروها تقديرا
اللهم أغفر لجميع موتى الملسمين الذين شهدوا لك بالوحدانية و لنبيك بالرسالة و ماتوا على ذلك
اللهم باعد بينهم و بين خطاياهم كما باعدت بين المشرق و المغرب
و أعنهم على جواب الملكين يا أرحم الراحمين
اللهم كن لهم بعد الحبيب حبيبا و لدعاء من دعا لهم من المؤمنين سامعا و مجيبا
و أكتب لهم من مواهب رحمتك حظا و نصيبا
اللهم أنقلهم من ضيق اللحود و القبور إلى سعة الدور و القصور
في سدر مخضود وطلح منضود و ظل ممدود و ماء مسكوب
و فاكهة كثيرة لا مقطوعة ولا ممنوعة و فرش مرفوعة
مع الذين أنعمت عليهم من النبيين والصديقين والشهداء والصالحين وحسن أولئك رفيقا
اللهم نور مرقدهم و عطر مشهدهم و طيب مضجعهم و آنس وحشتهم
و أرحم غربتهم و نفس كربتهم و قهم عذاب القبر و فتنته
اللهم أنت ربهم و أنت خلقتهم و أنت هديتهم للإسلام و أنت قبضت روحهم
و أنت أعلم بأسرارهم و علانيتهم و قد جئناك شفعاء لهم فأغفر لهم يا غفور يا رحيم
اللهم أغفر لهم يا غفور يا رحيم
اللهم أغفر لهم و لنا يا غفور يا رحيم
و أرفع درجتهم في المهديين و أخلفهم في عقبهم فى الغابرين
و أغفر لنا و لهم يا رب العالمين
و أفسح لهم فى قبورهم و نور لهم فيها
لا إله إلا الله الغفور الرحيم
لا إله إلا الله رب العرش العظيم
لا إله إلا الله رب السموات و رب الأرض و رب العرش العظيم
اللهم حط عنهم ثقل الأوزار و هب لهم بالقرآن شمائل الأبرار
و أجعلهم في مقام من قاموا لك بالقرآن آناء الليل و أطراف النهار
حتى توجب لهم غفرانك و جزيل إحسانك و مواهب صفحك و رضوانك
يا أكرم من سئل و يا أوسع من جاد بالعطايا
طهرهم من دنس الخطايا و أمنن عليهم بالإجابة في قبر المنايا
و عافهم من كل مكروه يقع من محظور البلايا
يا كريم يا غفور يا رحيم
سبحان الذى اختار لنفسه الدوام وحكم بالموت والفناء على الأنام وساوى بالتراب بين الملوك والخدام
سبحان من عزير لا يضام و ملك لا يرام و قوي لا يعجزه الإنتقام
خلق السموات و الأرض وما بينهما في ستة أيام
و عنده علم الساعة و ينزل الغيث و يعلم ما في الأرحام
ذالكم الله ربكم لا إله إلا هو الملك القدوس السلام
و صدق محمد عبده و رسوله المفضل على سائر الأنام المخصوص بالشفاعة و الحوض و المقام
الذى هدانا الله به لدين الإسلام و أوضح لنا به مبهمات الأحكام
اللهم إنا دعوناك دعاء من يرجوك و يخشاك
و ابتهلنا إليك ابتهال من لم يخطر بباله سواك
و رحمتك تسع من أطاعك منا و من عصاك
فإما محسن قبلته و إما مسيء رحمته
يا من أدنى المنقطعين إليه و أغنى المتوكلين عليه
يا من يعلم عدد قطر الأمطار و ورق الأشجار و حبات الحصى
و ذرات الرمال و موجات البحار و عدد ما أظلم عليه الليل و أشرق عليه النهار
يا من لا تختلف عليه الوجوه ولا تشتبه عليه الأصوات
يا من مصير كل شىء إليه و رزق كل شىء عليه
يا قديم الإحسان يا دائم المعروف
يا من يعلم دبيب النملة السوداء على الصخرة الملساء في الليلة الظلماء
يا من إن نسيناه لا ينسانا و إن تركناه لا يتركنا يمهلنا و يرحمنا
يا من لا يفد الوافدون على أكرم منه و لا يجد القاصدون أرحم منه
يا خير من خلى به وحيد و يا خير من آوى إليه طريد
إلى سعة عفوك مددنا أيدينا فلا تولنا الحرمان و لا تبلنا بالخيبة والخسران
يا سميع الدعاء يا أرحم الراحمين
و الحمد لله رب العالمين
و صلي اللهم على نبينا محمد و على آله و صحبه والتابعين"
    </string>
    <string name="weight_margin">1</string>
    <string name="weight_space">0.5</string>
    
    
    <string name="user_hint">لإيقاف أو أستئناف سماع الدعاء فقط قم بالنقر على الشاشة</string>
    <string name="doaa_written_str">الدعاء مكتوب</string>
    <string name="error_happened">حدث خطأ فى التطبيق</string>


</resources>
